[package]
name = "swap_channel"
description = "A safe lock-free parallel communication channel based on mem::swap"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
version = "0.2.2"
edition = "2021"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
