[package]
name = "two_phase_channel"
description = "A safe synchronisation-free parallel communication channel by statically forbidding conflicting accesses"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
repository = "https://github.com/ISibboI/two_phase_channel"
version = "0.2.1"
edition = "2021"
license = "BSD-2-Clause"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
